# anshitsu

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  README.rst  VERSION_3_1_PLAN.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-package.yml  release.yml  testing.yml
native/anshitsu-color/: Cargo.toml
native/anshitsu-color/src/: lib.rs
scripts/: build_native_wheel.py
src/anshitsu/: __version__.py  cli.py  image_io.py  main.py  process.py  processor.py  retouch.py
src/anshitsu/process/: _native_color.py  apocalypse.py  ashigara.py  brightness.py  classic.py  color.py  color_auto_adjust.py  color_stretch.py  contrast.py  create_alpha_mask.py  cross_process.py  cyanotype.py  grayscale.py  invert.py  line_drawing.py  noise.py  orthochromatic.py  output_rgb.py  posterize.py  processor.py  put_alpha_mask.py  remove_alpha.py  rochester.py  roppongi.py  sepia.py  sharpness.py  ultramarine.py  vignette.py
tests/: conftest.py  test_alpha.py  test_anshitsu.py  test_apocalypse.py  test_ashigara.py  test_brightness.py  test_classic.py  test_cli.py  test_color.py  test_colorautoadjust.py  test_colorstretch.py  test_contrast.py  test_cross_process.py  test_cyanotype.py  test_grayscale.py  test_image_io.py  test_invert.py  test_line_drawing.py  test_negative.py  test_noise.py  test_non_option.py  test_orthochromatic.py  test_output_rgb.py  test_posterize.py  test_process.py  test_process_alpha.py  test_processor_pipeline.py  test_retouch.py  test_rochester.py  test_roppongi.py  test_sepia.py  test_sharpness.py  test_tosaka.py  test_ultramarine.py  test_vignette.py
