[tool.poetry]
name = "anshitsu"
version = "1.5.1"  # using poetry-dynamic-versioning
description = "A tiny digital photographic utility."
readme = "README.md"
authors = ["Iosif Takakura <iosif@huideyeren.info>"]
homepage = "https://github.com/huideyeren"
repository = "https://github.com/huideyeren/anshitsu"
documentation = "https://github.com/huideyeren/anshitsu"
license = "MIT"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
numpy = "^1.26.0"
Pillow = "^10.1.0"
colorcorrect = "^0.9.1"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^6.1.0"
mypy = "^0.981"
black = "^23.10"
isort = "^5.12.0"
pyproject-flake8 = "^0.0.1a4"
pytest-randomly = "^3.15.0"
tox = "^4.11.3"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
anshitsu = "anshitsu.cli:main"

[tool.poetry.group.dev.dependencies]
importlib-metadata = "^6.8.0"
poetry-dynamic-versioning = "^1.1.1"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports=1
